fix: styles not appearing on safari browser, metadata modify

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,38 +10,38 @@
 
   @layer base {
     :root {
-      --background: 0 0% 100%;
-      --foreground: 222.2 84% 4.9%;
+    --background: 255, 255, 255;
+    --foreground: 5, 5, 25;
 
-      --card: 0 0% 100%;
-      --card-foreground: 222.2 84% 4.9%;
+    --card: 255, 255, 255;
+    --card-foreground: 5, 5, 25;
 
-      --popover: 0 0% 100%;
-      --popover-foreground: 222.2 84% 4.9%;
+    --popover: 255, 255, 255;
+    --popover-foreground: 5, 5, 25;
 
-      --primary: 171 60 41;
-      --primary-foreground: 210 40% 98%;
+    --primary: 42, 167, 152;
+    --primary-foreground: 240, 246, 250;
 
-      --secondary: 210 40% 96.1%;
-      --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 239, 245, 249;
+    --secondary-foreground: 15, 20, 32;
 
-      --muted: 210 40% 96.1%;
-      --muted-foreground: 215.4 16.3% 46.9%;
+    --muted: 239, 245, 249;
+    --muted-foreground: 97, 108, 124;
 
-      --accent: 210 40% 96.1%;
-      --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 239, 245, 249;
+    --accent-foreground: 15, 20, 32;
 
-      --destructive: 0 84.2% 60.2%;
-      --destructive-foreground: 210 40% 98%;
+    --destructive: 236, 26, 41;
+    --destructive-foreground: 240, 246, 250;
 
-      --border: 214.3 31.8% 91.4%;
-      --input: 214.3 31.8% 91.4%;
-      --ring: 222.2 84% 4.9%;
+    --border: 226, 233, 241;
+    --input: 226, 233, 241;
+    --ring: 5, 5, 25;
 
-      --radius: 0.5rem;
+    --radius: 0.5rem;
 
-      --black: 220 25 14;
-    }
+    --black: 27, 34, 46;
+  }
 
     .dark {
       --background: 222.2 84% 4.9%;
